--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,12 @@
+sudo: required
+
 language: java
+
 jdk:
   - oraclejdk8
+  
+services:
+  - docker
+  
+before_install:
+    docker run -p 6379:6379 redis
